preview/pr-129/deploy/k8s-probes-demo.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-http-server
  labels:
    app: simple-http-server
    app.kubernetes.io/component: simple-http-server
    app.kubernetes.io/instance: simple-http-server
    app.kubernetes.io/name: simple-http-server
    app.kubernetes.io/part-of: simple-http-server-app
    app.openshift.io/runtime: other-linux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-http-server
  template:
    metadata:
      labels:
        app: simple-http-server
    spec:
      volumes:
      - name: checker
        emptyDir: {}
      containers:
        - name: managment
          image: registry.access.redhat.com/ubi8/ubi-micro
          volumeMounts:
            - mountPath: /checker/
              name: checker
          command:
            - /bin/sh
            - '-c'
            - |
              while true; do
                date
                ls -1 /checker/
                sleep 1
              done;
          imagePullPolicy: Always
        - name: workload
          image: quay.io/openshift-examples/simple-http-server:latest
          volumeMounts:
            - mountPath: /checker/
              name: checker
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - |
                  #!/bin/sh

                  if [ -f "/checker/live" ] ; then
                    exit 0;
                  fi;

                  exit 1
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - |
                  #!/bin/sh

                  if [ -f "/checker/ready" ] ; then
                    exit 0;
                  fi;

                  exit 1
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          startupProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - |
                  #!/bin/sh

                  if [ -f "/checker/startup" ] ; then
                    exit 0;
                  fi;

                  exit 1
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-http-server
    app.kubernetes.io/component: simple-http-server
    app.kubernetes.io/instance: simple-http-server
    app.kubernetes.io/name: simple-http-server
    app.kubernetes.io/part-of: simple-http-server-app
  name: simple-http-server
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simple-http-server
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simple-http-server
    app.kubernetes.io/component: simple-http-server
    app.kubernetes.io/instance: simple-http-server
    app.kubernetes.io/name: simple-http-server
    app.kubernetes.io/part-of: simple-http-server-app
  name: simple-http-server
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: simple-http-server
    weight: 100
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
